--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Formação Alura</title>
 </head>
 <body>
-    minha primeira página
+<h1> Séries Netflix</h1>
+
+<p>Como acessar:
+    1. Criar uma conta com seus dados
+</p>
 
 </body>
 </html>
