--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Formação Alura</title>
 </head>
 <body>
-<h1> Séries Netflix</h1>
+<h1> Pegue a fruta/h1>
 
-<p>Como acessar:
-    1. Criar uma conta com seus dados
+<p>Como jogar:
+    1. Clique nas frutas
 </p>
 
 </body>
+<iframe src="https://scratch.mit.edu/projects/900587096/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </html>
