--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Formação Alura</title>
 </head>
 <body>
-<h1> Pegue a fruta/h1>
+<h1> Pegue a fruta </h1>
 
 <p>Como jogar:
     1. Clique nas frutas
