--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formação Alura</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1> Pegue a fruta </h1>
@@ -12,6 +15,7 @@
     1. Clique nas frutas
 
 </p>
+
 <iframe src="https://scratch.mit.edu/projects/900587096/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </body>
 </html>
