--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1> Pegue a fruta </h1>
+<h1> Pegue a fruta </h1> <br>
 
 <p>Como jogar:
     1. Clique nas frutas
