--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <header>Catálogo de jogos</header>
 <h1> Pegue a fruta </h1> <br>
 
 <p>Como jogar:
