--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>Catálogo de jogos</header>
 <h1> Pegue a fruta </h1> <br>
 
-<p>Como jogar:
+<p>Como jogar: <br>
     1. Clique nas frutas <br>
 
 </p>
