--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
 
     <header>Catálogo de jogos</header>
+
+    <section>
 <h1> Pegue a fruta </h1> <br>
 
 <p>Como jogar: <br>
@@ -19,5 +21,7 @@
 </p>
 
 <iframe src="https://scratch.mit.edu/projects/900587096/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+</section>
 </body>
+
 </html>
