--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>Catálogo de jogos</header>
 
     <section>
-<h1> Pegue a fruta </h1> <br>
+<h1> Pegue a fruta </h1> 
 
 <p>Como jogar: <br>
     1. Clique nas frutas <br>
